issue #9: fixed non-clickable sidebar elements on mobile by adding cursor:pointer

--- a/web/src/components/channel-add/index.sass
+++ b/web/src/components/channel-add/index.sass
@@ -5,6 +5,7 @@
 	position: relative
 	overflow: hidden
 	color: #444
+	cursor: pointer
 
 	&__form
 		position: absolute
