--- a/web/src/components/user-info/index.sass
+++ b/web/src/components/user-info/index.sass
@@ -7,6 +7,7 @@
 	align-items: center
 	width: 80%
 	margin: 0 auto
+	cursor: pointer
 
 	&:hover
 	  background: #ddd
